--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,8 @@ name = "iris"
 version = "0.1.0"
 authors = ["Adam Greig <adam@adamgreig.com>"]
 
+[features]
+default = ["tts"]
+tts = []
+
 [dependencies]
